Refactor ScamShield logging to use info level; update build configuration and add new scam detection classes for improved functionality